# cutgeneratingfunctionology

./: .check-long-timings.json  .dir-locals.el  .gitignore  .readthedocs.yml  .travis-deploy-doc.sh  .travis-install.sh  .travis-quick-test.sh  .travis-test.sh  .travis.yml  .travis_ci_gh_pages_deploy_key.enc  2q_mip.sage  2q_search.sage  5slope_mip.sage  6slope_backtracking.sage  6slope_color.sage  AUTHORS  AUTHORS.rst  Dockerfile  GMI_irrational.sage  Makefile  README.md  README.rst  THANKS.rst  VERSION  _doctest_environment.py  animation_2d_diagram.sage  attach_all.sage  bug_examples.sage  compendium_procedures.sage  computer_based_search_naive_dff.sage  continuous_case.sage  cpl3.sage  cpl3_tmp.sage  crazy_perturbation.sage  crazy_perturbation_examples.sage  demo.ipynb  demo.rst  demo.sage  dey-richard-not-extreme.txt  dff_functions.sage  (+73 more)
bib/: Makefile  amsabbrvurl.bst  bibliography-biblatex-ext.tex  bibliography-biblatex.tex  bibliography-bibtex.tex  cutgeneratingfunctionology.bib
cutgeneratingfunctionology/: __init__.py
data/: example5slope24data.txt  example7slopeCoarse2.txt
extra/: show_plot_zoom.sage
multirow/: fine_regular_triangulation_examples.sage  fxn-on-complex.sage  fxn-on-complex_grid.sage  lifting_region_examples.sage  lifting_region_yuan.sage  minimal_lifting_affine_examples.sage  polyhedral.sage
old_examples/: 3_slope_function_needing_symmetry_reflection.sage  GMI.sage  README.md  irrational_function.sage
region_graphics/: parameter_region_plot.sage
survey_graphics/: .gitignore  Makefile  README.md  all_graphics.tex  all_graphics_good.tex  dff_graphics.sage  emit_sage_commands.sage  graphics_for_algo_paper.sage  graphics_for_algo_paper_face_sampling.sage  graphics_for_algo_paper_functions.sage  graphics_for_algo_paper_init.sage  graphics_for_algo_paper_moves.sage  graphics_for_algo_paper_strip_lemma.sage  graphics_for_algocomp_paper.sage  graphics_for_computer_based_search.sage  graphics_for_crazy_perturbation.sage  graphics_for_extreme_notes.sage  graphics_for_facets_paper.sage  graphics_for_facets_slides.sage  graphics_for_lifting_project.sage  graphics_for_software_paper.sage  graphics_for_survey.sage  graphics_for_survey_bccz.sage  (+7 more)
(+234 files in other folders)
