[build-system]
requires = [
  'setuptools>=61.2',
  'setuptools_scm[toml]>=6.0',
]
build-backend = "setuptools.build_meta"

[project]
name = "cutgeneratingfunctionology"
description = "Python code for computation and experimentation with cut-generating functions"
authors = [
    {name = "Matthias Koeppe", email = "mkoeppe@math.ucdavis.edu"},
    {name = "Yuan Zhou"},
    {name = "Chun Yu Hong"},
    {name = "Jiawei Wang"},
    {name = "with contributions by undergraduate programmers"},
]
dependencies = []
requires-python = ">=3.9"
license = "GPL-2.0-or-later"
keywords = ["integer programming", "cutting planes"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ['version']

[project.optional-dependencies]
doc = [
    "cutgeneratingfunctionology[passagemath]",
    "sage-package",
    "sphinx",
    "sphinxcontrib-bibtex",
]
passagemath = [
    "passagemath-pari",
    "passagemath-polyhedra",
    "passagemath-plot",
    "passagemath-repl",
    "passagemath-flint",
    "passagemath-graphs",
    "passagemath-singular",
    "passagemath-symbolics",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/mkoeppe/cutgeneratingfunctionology"
Documentation = "http://mkoeppe.github.io/cutgeneratingfunctionology/doc/html/"
Source = "https://github.com/mkoeppe/cutgeneratingfunctionology"
"Issue Tracker" = "https://github.com/mkoeppe/cutgeneratingfunctionology/issues"
"Demo on mybinder.org" = "https://mybinder.org/v2/gh/mkoeppe/cutgeneratingfunctionology/master?filepath=demo.ipynb"

[tool.setuptools_scm]
write_to = 'version.txt'
version_scheme = 'post-release'
local_scheme = 'dirty-tag'
